--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {   
     font-size: large;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: aqua;
+    color:black;
 }
