--- a/style.css
+++ b/style.css
@@ -1,7 +1,58 @@
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+.form-container {
+    width: 1527px;
+    height: 204px;
+    flex-shrink: 0;
+    background-color: #000000;
+    padding: 20px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #FFF;
+}
+
+.form-container h1 {
+    text-align: center;
+    color: #FFFFFF; /* White color for the header */
+    margin-bottom: 20px;
+}
+
+#contactForm label,
+#contactForm input,
+#contactForm button {
+    color: #000000;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#contactForm input {
+    background-color: #F5F5F5;
+    border: none;
+    padding: 10px;
+    margin-bottom: 10px;
+    width: calc(100% - 40px); /* Adjust width as needed, considering padding */
+    box-sizing: border-box;
+}
+
+#contactForm button {
+    background-color: #000000;
+    border: 2px solid #FFF;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+#contactForm button:hover {
+    background-color: #333333;
+}
 .iframe-container {
     position: relative;
     width: 100%;
-    padding-top: 56.2225%; /* Aspect Ratio */
+    padding-top: 56.2225%;
     margin-top: 1.6em;
     margin-bottom: 0.9em;
     overflow: hidden;
@@ -20,3 +71,30 @@
     padding: 0;
     margin: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
