--- a/style.css
+++ b/style.css
@@ -1,49 +1,85 @@
-.iframe-container {
-    position: relative;
-    width: 100%;
-    padding-top: 56.2225%;
-    margin-top: 1.6em;
-    margin-bottom: 0.9em;
-    overflow: hidden;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
-    will-change: transform;
-}
 
-.responsive-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    padding: 0;
+body {
+    font-family: 'Space Mono', monospace;
     margin: 0;
-}
+    padding: 0;
+    color: #000000; 
+    background: linear-gradient(to right, #FFFFFF 50%, #EDF0F2 50%);
+    }
+    
+    
+.profile-image {
+ display: flex;
+width: 26.375rem; 
+height: 23.426rem; 
+padding: 1.43513rem 0 1.63888rem 0; 
+flex-direction: column;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+    }
+    
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .name-header h1 {
+    color: #000000; 
+    text-align: center;
+    font-family: 'Space Mono', monospace;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 700; 
+    line-height: normal;
+    }
+    
+  
+    .name-header p {
+    color: #000000; 
+    text-align: center;
+    font-family: 'Space Mono', monospace;
+    font-size: 2.5rem;
+    font-style: normal;
+font-weight: 700; 
+    line-height: normal;
+    }
+    
+  
+    .linkedin-button {
+  width: 17.25rem;
+  height: 3rem;
+    flex-shrink: 0;
+  border: 2px solid #000000; 
+     background: #000000; 
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center; 
+   text-decoration: none; 
+   color: #FFFFFF; 
+     font-family: 'Space Mono', monospace;
+ font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+    }
+    
+    .linkedin-button:hover {
+    background-color: #000000DE; 
+    }
+    
+    
+    .DP {
+    display: block; 
+    width: 27.871rem; 
+    height: 16.695rem; 
+    margin: auto; 
+    }
+    .DP {
+     display: flex;
+    width: 27.871rem; 
+     height: 16.695rem; 
+    padding: 3.69044rem 0.46069rem 3.68956rem 0.47931rem;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    }
+    
